-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
Commit fb80ae7c added functions to wirecheck w/o actually calling them. As a result, attempts to build it with -WError will fail with:
wirecheck.c:2170: error: 'check_update_params' defined but not used
wirecheck.c:2177: error: 'check_update_op' defined but not used
wirecheck.c:2187: error: 'check_update_ops' defined but not used
wirecheck.c:2194: error: 'check_update_records' defined but not used
wirecheck.c:2208: error: 'check_llog_update_record' defined but not used
make: *** [wirecheck-wirecheck.o] Error 1