LU-7033 utils: Add missing calls to wirecheck

The following functions were defined but never called:
    check_update_params
    check_update_op
    check_update_ops
    check_update_records
    check_llog_update_record

Change-Id: Ic1d12f5f422a01cf886432348d5c6c80ab19d1a5
Signed-off-by: Henri Doreau <henri.doreau@cea.fr>
Reviewed-on: http://review.whamcloud.com/16059
Tested-by: Jenkins
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: wangdi <di.wang@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>